<resources>
    <string name="app_name" translatable="false">Gigatlon</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_routines">Routines</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_progress">Progress</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="extended_routine">Extended Routine</string>

    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add">Add</string>
    <string name="routine_name">Routine Name: </string>
    <string name="RoutineCreator">RoutineCreator</string>
    <string name="routine_duration">Duraiton: </string>
    <string name="routine_diff">Difficulty: </string>
    <string name="Message">Clicked Item %1$d!!!</string>
    <string name="Fav">Clicked fave %1$d!!!</string>
    <string name="favebutton">faveButton</string>
    <string name="sharebutton">ShareButton</string>
    <string name="Submit">Submit</string>
    <string name="profile_pic">Profile pic</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_weight">Edit weight</string>
    <string name="edit_date">Edit Date</string>
    <string name="edit_height">Edit height</string>
    <string name="AddWeight">Add Weight</string>
    <string name="ExecuteRoutine">Execute</string>
    <string name="current_cycle">Current Cycle</string>
    <string name="bar">-</string>
    <string name="execute">Execute</string>
    <string name="order_by">"Order by: "</string>
    <string name="log_in">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Don\'t have an account? <a href="to_somewher" >Register now!</a></string>
    <string name="have_account">Already have an account? <a href="to_somewher" >Log in now!</a></string>
    <string name="confirm_message">Thank you for choosing Gigatlon. Press Confirm Email to confirm your email</string>
   <string name="onRegisterd">Thank you for choosing Gigatlon. We have sent you an email to verify your account. If have already confirmed your acount go to Log in or resed verification code</string>

    <string name="cofirm">Confirm email</string>
    <string name="full_name_account">\"Full Name: \"</string>
    <string name="birthdate">Birthdate: </string>
    <string name="gender">Gender: </string>
    <string name="mail">Email: </string>
    <string name="weight">Weight: </string>
    <string name="height">Height: </string>
    <string name="swipe_text">Swipe to see more avatars</string>
    <string name="progress">Progress</string>

    <string name="cycleName">Cycle: </string>
    <string name="exerName">Exercise: </string>
    <string name="exerReps">Repetition: </string>
    <string name="next_exer">Next Exercise: </string>
    <string name="next_cycle">Next Cycle: </string>
    <string name="exit">Exit</string>
    <string name="exAndRate">Exit and Rate</string>
    <string name="next">Next</string>
    <string name="creator">Creator: </string>

    <string name="Error">Error while loading data, try again later</string>
    <string name="errorN">Error while inserting new data</string>
    <string name="succes">Success</string>
    <string name="code_sent">Verification code sent</string>
    <string name="code_not_set">Error sending verification code</string>
    <string name="account_confirmed">Confirmation successful</string>
    <string name="account_confirmed_error">Error while verifying your account</string>
    <string name="rating_sent">Rated</string>
    <string name="rating_not_sent">Error while rating routine, try again later</string>
    <string name="fave_good">Added To Favorites</string>
    <string name="fave_bye">Removed from Favorites</string>
    <string name="errorReg">Error while registering, check data or try again later</string>



    <string-array name="brew_array">
        <item>Newest Date</item>
        <item>Oldest Date</item>
        <item>Lowest Difficulty</item>
        <item>Highest Difficulty</item>
        <item>Lowest Rating</item>
        <item>Highest Rating</item>
    </string-array>

    <string-array name="gender">
        <item>female</item>
        <item>male</item>
        <item>other</item>
    </string-array>

</resources>