<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gigatlon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.gigatlon.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_routines"
        android:name="com.example.gigatlon.ui.routines.RoutinesFragment"
        android:label="@string/menu_routines"
        tools:layout="@layout/fragment_routines" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.gigatlon.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.gigatlon.ui.progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />

</navigation>