<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/boarder"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/routine_list_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_name"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/routine_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoutineCreator"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routine_list_item_id" />

        <TextView
            android:id="@+id/routine_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_duration"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routine_creator" />

        <TextView
            android:id="@+id/routine_diff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_diff"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routine_duration" />

        <ImageButton
            android:id="@+id/imageButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>