<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/boarder"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/routine_list_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_name"
            android:textSize="@dimen/routine_name_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/routine_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoutineCreator"
            android:textSize="@dimen/routine_data_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingRoutine" />


        <TextView
            android:id="@+id/routine_diff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_diff"
            android:textSize="@dimen/routine_data_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routine_creator" />

        <ImageButton
            android:id="@+id/favButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favebutton"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintBottom_toBottomOf="@+id/routine_list_item_id"
            app:layout_constraintEnd_toStartOf="@+id/shareButton"
            app:layout_constraintTop_toTopOf="@+id/routine_list_item_id" />

        <ImageButton
            android:id="@+id/shareButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/sharebutton"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="@+id/routine_list_item_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/routine_list_item_id" />

        <RatingBar
            android:id="@+id/ratingRoutine"
            style="@style/RatingBarSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routine_list_item_id" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>